# HexapodPC

./: CMakeLists.txt  LICENSE  README.md
src/: gui.cpp  gui.h  leg.cpp  leg.h  main.cpp  perspectiveprojection.cpp  perspectiveprojection.h  robot.cpp  robot.h  robotcontroler.cpp  robotcontroler.h  util.cpp  util.h  view.cpp  view.h  viewer.cpp  viewer.h
src/GUI/: gui.cpp  gui.h  perspectiveprojection.cpp  viewer.cpp  viewer.h
src/Gamepad/: gamepad.c  gamepad.h
src/Robot/: inversekinematics.cpp  inversekinematics.h  leg.cpp  leg.h  robot.cpp  robot.h  robotcontroler.cpp  robotcontroler.h  robotwalk.cpp  robotwalk.h  servo.cpp  servo.h
